--- a/ZYBuryPoint/Podfile
+++ b/ZYBuryPoint/Podfile
@@ -3,7 +3,7 @@ platform :ios, '9.0'
 inhibit_all_warnings!
 target 'ZYBuryPoint' do
 
-  pod 'AFNetworking'
+  pod 'AFNetworking',"3.2.1"
   pod 'Aspects'
 
 end
